# podstawy-uczenia-maszynowego

./: pyproject.toml
lab1/: notebook.ipynb
lab2/: notebook.ipynb
